...
              ),
              Gaps.v24,
              GestureDetector(
                onTap: _onNextTap,
                child: FormButton(
                  disabled: _username.isEmpty,
                  buttonText: 'Next',
                ),
              ),
            ],
          ),
        ));
  }
...
